--- a/css/typography.css
+++ b/css/typography.css
@@ -10,12 +10,11 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #222;
+  color: var(--text-color);
 }
 
 p {
-  margin-top: 0;
-  margin-bottom: 1.25rem;
+  margin: 0 0 1.25rem 0;
 }
 
 h1,
@@ -23,7 +22,7 @@ h2,
 h3,
 h4,
 h5 {
-  margin: 0;
+  margin: 2.75rem 0 1rem 0;
   font-family: "Staatliches", sans-serif;
   font-weight: 400;
   line-height: 1.15;
